# Job_Parser

./: .gitignore  README.md  pyproject.toml
src/: Utils.py  main.py  utils.py
src/classes/: DBmanger.py  GUI.py  api.py  employer.py  queries.sql  user_exception.py  vacancy.py  work_with_user.py  working_with_files.py
tests/: test_vacancy.py  test_work_with_user.py  test_working_with_files.py
